kubernetes/apps/nginx-test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-test
  namespace: nginx-test
  labels:
    app.kubernetes.io/name: nginx-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx-test
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx-test
    spec:
      containers:
        - name: nginx
          image: docker.io/library/nginx:1.27.4-alpine
          ports:
            - name: http
              containerPort: 80
