kubernetes/apps/nginx-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-test
  namespace: nginx-test
spec:
  selector:
    app.kubernetes.io/name: nginx-test
  ports:
    - name: http
      port: 80
      targetPort: http
